--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -151,7 +151,7 @@
 
 .service_block {
   display: flex;
-  flex-direction: column;
+  flex-direction: column !important;
   justify-content: center;
   align-items: center;
   margin: 10px 0;
