--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -93,7 +93,7 @@
 .vision_container {
   justify-content: center;
   padding: 30px 10% 20px 10%;
-  background: linear-gradient(-45deg, #484e14, rgb(74, 45, 28), rgba(74, 45, 28, 0.60), rgb(96, 167, 37), rgb(194, 255, 169));
+  background: linear-gradient(-45deg, #40170c, rgb(74, 45, 28), rgba(75, 82, 15, 0.6), rgb(96, 167, 37), rgb(194, 255, 169));
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
 }
